# Ob-Al-brooks-PA

./: .gitignore  1  3  9  AGENTS.md  CHANGELOG.md  OPTIMIZATION_TODO.md  PROJECT_STRUCTURE.md  README.md  README_EN.md  Untitled.md  config.json  conflict-files-obsidian-git.md  ddd  debug_symbol.py  docker-compose.yml  excalibrain.md  findings.md  messages.mo  mkdocs.yml  pa-db-export.json  package-lock 2.json  package.json  plugin_debug_log.md  progress.md  pyproject.toml  start-all.sh  stop-all.sh  task.md  task_plan.md  temp_footer.md  test_cryptofeed.py  价格行为学 22699d8757ab80798241c96b1d047981.md  价格行为实盘-复盘步骤.canvas  原生交易员控制台路线图.md  备选代码.md  策略标准化完成报告.md  🕵️ 数据巡检报告 (Inspector).md  🦁 交易员控制台 (Trader Command).md  🦁 交易员控制台 (Trader Command)4.0.md  (+1 more)
.claude/: claudian-settings.json
.claude-plugin/: plugin.json
.makemd/: fileCache.mdc  superstate.mdc
.obsidian/: app.json  appearance.json  community-plugins.json  graph.json  page-preview.json  types.json
.serena/: project.yml
.smart-env/: smart_env.json
.smtcmp_json_db/: .initial_migration_completed  .initial_migration_completed 2
.space/: context.mdb
.spec-workflow/: index.html
Categories 分类/: Al Brooks 价格行为概率总结 .md  Al brooks PA.md  总揽.canvas
Clippings 简报/: 📋 系统重构分析_v5.md
Daily/: 交易日记.base
Excalidraw/: Drawing 2025-12-17 08.11.56.excalidraw.md  PA知识图谱.md
Notes 笔记/: K线，形态，和信号K线.md  一天中不同时段.md  三角形.md  买卖压力.md  交易主要趋势反转MTR.md  交易宽牛市通道.md  交易方程和概率.md  交易突破.md  交易窄型牛市通道.md  交易管理与获利.md  交易趋势.md  交易高潮式反转.md  保护性止损.md  剥头皮.md  加仓.md  双顶和双底.md  回调和K线的计算.md  在交易区间内交易.md  头部和肩部.md  如何交易.md  完成的奖励视频.md  实际风险.md  市场周期.md  支撑-阻力位.md  末端旗形.md  楔形.md  概率口径（P1-P3）.md  波段交易实例.md  测量移动.md  管理亏损.md  缺口.md  订单.md  阶段一：市场背景判断 (Context).md  阶段三：持仓过程管理 (Trade Management).md  阶段二：策略匹配与入场 (Strategy & Entry).md  阶段四：复盘与总结 (Review & Summary).md
Templates/: .md  Al Brooks 价格行为概率总结 .md  Al brooks命名规则.md  ArchiveTest.md  DoctorTest.md  PA_Brooks_Semantic_Groups.md  PA_Brooks_Term_Tags_Preset.md  PA_Glossary(术语表).md  PA_Metadata_Schema.md  PA_Properties_Inventory.md  PA标签体系 (Tag System).md  Psychology Checklist (Tilt Management).md  SRSTest.md  单笔交易模版 (Trade Note).md  图表分析模版 (Chart Analysis).md  学习卡片使用说明.md  属性值预设.md  概率口径（P1-P3）.md  每日复盘模版 (Daily Journal).md  理论模版 (Concept Template).md  理论模版 (Concept Template)al brooks.md  策略卡片审核检查清单.md  策略卡片模版 (Strategy Card).md  策略卡片规范模板 (Strategy Card Template).md  课程理论模版 (Concept Template).md
backend/: .env.example  README.md  docker-compose.yml
backend/services/trading-service/: Dockerfile  Makefile  pyproject.toml  requirements-dev.txt  requirements.lock.txt  requirements.txt
backend/services/trading-service/scripts/: indicator-service.service
backend/services/trading-service/src/: __init__.py  config.py  simple_scheduler.py
backend/services/trading-service/src/core/: __init__.py
backend/services/trading-service/src/db/: reader.py
backend/services/trading-service/src/indicators/batch/: futures_aggregate.py  liquidity.py
backend/services/trading-service/src/indicators/incremental/: ema_gc.py
backend/services/trading-service/src/observability/: __init__.py
backend/services/trading-service/src/utils/: __init__.py
backend/services/trading-service/tests/: __init__.py  conftest.py
config/: .env.example
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: DEPLOY_PROMPT.md  SYNC_ARCHITECTURE.md  index.md
init-scripts/: 01-init-schemas.sql  04-create-aggregates.sql
logs/: .38876268ded06ca1b739691de58234ce9ad17558-audit.json
scripts/: download_hf_data.py  dump_frontmatter.js  export_timescaledb_main4.sh  pa-config.js  pa-core.js  pa-cover-helper-new.js  pa-cover-helper.js  pa-utils.js  pa-view-account.js  pa-view-actions.js  pa-view-course.js  pa-view-cycle.js  pa-view-gallery.js  pa-view-hub-analytics.js  pa-view-hub-trading.js  pa-view-inspector.js  pa-view-manager.js  pa-view-memory.js  pa-view-playbook.js  pa-view-schema.js  pa-view-strategy.js  pa-view-today.js  pa-view-trend.js  pa-view-tuition.js  start.sh  start_mac.sh
services/signal-service/: .env.example  .gitignore  Dockerfile  pyproject.toml
services/signal-service/src/engines/: pg_engine.py  sqlite_engine.py
services/signal-service/src/storage/: cooldown.py  history.py
services/signal-service/tests/: test_formatters.py
tests/: __init__.py  conftest.py  test_ai.py  test_config.py  test_data.py  test_futures.py  test_indicators.py  test_indicators_full.py  test_klines.py  test_signals.py  test_signals_full.py
tools/: generate-snapshot-from-legacy.js
价格行为学/: 01 Terminology 22699d8757ab8197a8cff987c2277a58.md  02B Chart Basics and Price Action Volume, News 22699d8757ab812faf1dd5e728d0e967.md  07A Starting Out 22699d8757ab81dd8848d6f7f008544a.md  07B Starting Out 22699d8757ab81c0aa88c4ea9526c864.md  08B Reversal bars and inside outside bars 22699d8757ab81efaf4ccab2b5ad8372.md  08D Weak Sell Signal Bar and Weak Context wait to  22699d8757ab81b0859dcdf4e5dbb4a8.md  09B DT,DB; H4 and L4 consecutive reversals 22699d8757ab813fafe1c7006981ada6.md  1 29 2025 22699d8757ab812e91a2cef3074bfd3f.md  10 6 Ali总结一周chart 【看大知小】 22699d8757ab81ee81deddbf30aaa91d.md  10B Pressure in TR and Channels 22699d8757ab81dcabf5c0f26aee64c2.md  11 25 2024 22699d8757ab814898a3e919d90515fa.md  11B Moving Average Gap Bars ; Exhaustion Gap 22699d8757ab81b1b5b4fbfd0f29e909.md  11C Micro gap, Gap open bars, Gaps means strength, 22699d8757ab8163a1e1df9a9d7c0921.md  11D Gaps often leads to trends; Stairs 22699d8757ab81959702e490a1512875.md  12A Four part of market cycle; PB is start of chan 22699d8757ab8186bbd5fcf1ce27d3b0.md  13C Scalping and swing trading 22699d8757ab813ba94de3e6082f9bdc.md  14A Trends; Bull trend needs HL; Bear Trend needs  22699d8757ab8118a3a7db351d82b028.md  14B When not clear, then TR; Breakout is strongest 22699d8757ab81e0b3a7d358bbb13844.md  14C Types of trends; Bull and bear trends; Traps a 22699d8757ab8127becceaa052d33c8d.md  14D Trend from the Open; Trending Trading Range; B 22699d8757ab8102bde4ee5aa47ef865.md  14E Tight Channel (strong trend); Small pullback t 22699d8757ab81209ab8cd70410d7b25.md  (+86 more)
(+1615 files in other folders)
